--- a/index.html
+++ b/index.html
@@ -1,9 +1,76 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <title>Cheatsheet Project</title>
+</head>
 <body>
-  <h1>Mystic Geek</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+    <h1>HTML Table Reference</h1>
 
+    <!--Table Tag tables-->
+    <h2>Table Tags</h2>
+    <table>
+        <thead>
+            <th>Tag</th>
+            <th>Name</th>
+            <th>Description</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="attribute">&lt;table&gt;</td>
+                <td>Table</td>
+                <td>The wrapper element for all HTML tables.</td>
+            </tr>
+            <tr>
+                <td class="attribute">&lt;thead&gt;</td>
+                <td>Table Head</td>
+                <td>The set of rows defining the column headers in a table.</td>
+            </tr>
+            <tr>
+                <td class="attribute">&lt;tbody&gt;</td>
+                <td>Table Body</td>
+                <td>The set of rows containing actual table data.</td>
+            </tr>
+            <tr>
+                <td class="attribute">&lt;tr&gt;</td>
+                <td>Table Row</td>
+                <td>The table row container.</td>
+            </tr>
+            <tr>
+                <td class="attribute">&lt;td&gt;</td>
+                <td>Table Data</td>
+                <td>The table row container.</td>
+            </tr>
+            <tr>
+                <td class="attribute">&lt;tfoot&gt;</td>
+                <td>Table Foot</td>
+                <td>The set of rows defining the footer in a table</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <!--Table Attributes table-->
+    <h2>Table Attributes</h2>
+    <table>
+        <thead>
+            <th>Attribute</th>
+            <th>Name</th>
+            <th>Description</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="attribute">&lt;colspan&gt;</td>
+                <td>Column Span</td>
+                <td>Defines how many columns a td element should span.</td>
+            </tr>
+            <tr>
+                <td class="attribute">&lt;rowspan&gt;</td>
+                <td>Row Span</td>
+                <td>Ddefines how many rows a td element should span.</td>
+            </tr>
+        </tbody>
+    </table>
+</body>
 </html>
